--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
 {
   "name": "rf-ui-react",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "axios": "^0.20.0",
+    "polished": "^3.6.5",
+    "prismjs": "^1.21.0",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "buildbak": "react-scripts build",
+    "build": "tsc -p tsconfig.build.json",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "coverage": "react-scripts test --coverage --watchAll=false"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,19 +34,60 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.11.5",
-    "@storybook/addon-a11y": "^6.0.21",
-    "@storybook/addon-actions": "^6.0.21",
-    "@storybook/addon-essentials": "^6.0.21",
-    "@storybook/addon-knobs": "^6.0.21",
-    "@storybook/addon-links": "^6.0.21",
-    "@storybook/addon-storysource": "^6.0.21",
-    "@storybook/node-logger": "^6.0.21",
+    "@babel/core": "^7.11.1",
+    "@babel/helper-call-delegate": "^7.10.4",
+    "@storybook/addon-a11y": "^6.0.7",
+    "@storybook/addon-actions": "^6.0.7",
+    "@storybook/addon-docs": "^6.0.10",
+    "@storybook/addon-essentials": "^6.0.7",
+    "@storybook/addon-knobs": "^6.0.7",
+    "@storybook/addon-links": "^6.0.7",
+    "@storybook/addon-storysource": "^6.0.7",
+    "@storybook/addon-viewport": "^6.0.7",
+    "@storybook/node-logger": "^6.0.7",
     "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^6.0.21",
+    "@storybook/react": "^6.0.7",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.2",
     "babel-loader": "^8.1.0",
+    "react": "^16.13.1",
+    "react-docgen-typescript-loader": "^3.7.2",
+    "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
-    "styled-components": "^5.1.1"
-  }
+    "react-scripts": "3.4.3",
+    "typescript": "~3.7.2"
+  },
+  "peerDependencies": {
+    "@storybook/addon-viewport": "^6.0.7",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.3",
+    "typescript": "~3.7.2"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "!src/**/*.stories.tsx",
+      "src/**/*.tsx",
+      "!src/**/*.snap"
+    ]
+  },
+  "files": [
+    "dist"
+  ],
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "sideEffects": false
 }
