--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "axios": "^0.20.0",
     "polished": "^3.6.5",
     "prismjs": "^1.21.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "webpack": "^4.42.0"
   },
   "scripts": {
     "start": "react-scripts start",
