--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@IMRofu/rf-ui-react",
+  "name": "@LiangRongfu/rf-ui-react",
   "version": "1.2.0",
   "private": false,
   "repository": "https://github.com/LiangRongfu/rf-ui-react/",
   "publishConfig": {
-     "registry": "https://npm.pkg.github.com/zhufengnodejs"
+    "registry": "https://npm.pkg.github.com/@LiangRongfu"
   },
   "dependencies": {
     "axios": "^0.20.0",
