--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/styled-components": "^5.1.2",
     "babel-loader": "^8.1.0",
     "np": "^6.5.0",
+    "plop": "^2.7.4",
     "react": "^16.13.1",
     "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^16.13.1",
